--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,224 @@
   width: 30px;
   height: 30px;
 }
+
+.App{
+  text-align: center;
+  width: 100%;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content:center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card{
+  width: 95%;
+}
+
+.noGass th{
+  font-weight: normal !important;
+}
+
+.margeDiv{
+  margin: 20px;
+}
+
+*{
+  text-align: left;
+}
+
+.bs-select label{
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  justify-content:flex-start;
+  width: 180px;
+}
+
+.bs-select select{
+  display: flex;
+  flex-direction: row-reverse;
+  width: 60px;
+  
+}
+
+th{
+  border-bottom: solid black !important;
+  font-size: medium;
+}
+
+td{
+  background-color: white !important;
+  font-size: medium;
+}
+
+.dataTables_paginate{
+  font-size: medium;
+}
+
+.col-sm-12{
+  color: rgb(65, 65, 65);
+  font-size: medium;
+}
+
+thead[data-test="table-foot"] th{
+  display: none;
+}
+
+.row .col-md-7{
+  display: flex;
+  align-content: center;
+  justify-content:flex-end;
+  width: 50%;
+}
+
+.row .col-md-5{
+  display: flex;
+  align-content: center;
+  width: 50%;
+}
+
+.row .col-md-6{
+  display: flex;
+  align-content: center;
+  width: 50%;
+}
+
+.card-header{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #282c34;
+  font-size: large;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row !important;
+  justify-content:space-between !important;
+  align-items:center;
+}
+
+.navbar>div{
+  display: flex;
+  flex-direction: row !important;
+  justify-content:space-between !important;
+  align-items:center;
+}
+
+
+.navbar svg{
+  height: 15px;
+}
+
+#layoutSidenav{
+  display: flex;
+  flex-direction: row !important;
+  justify-content:space-between !important;
+}
+
+body, 
+.App,
+header{
+  margin: 0% !important;
+  padding: 0% !important;
+  color: #282c34
+}
+
+.bs-select label{
+  display: flex;
+  flex-direction:row-reverse !important;
+  justify-content:space-between !important;
+  align-items: center;
+}
+
+.bigestSvg{
+  height: 15px;
+}
+
+.form-check-label{
+  color: #282c34;
+  font-size: medium;
+  margin-right: 25px;
+}
+
+.check-div{
+  display: flex;
+  flex-direction:row !important;
+  justify-content:start;
+  align-items: center;
+}
+
+.form-check-input{
+  margin-top: 7px !important;
+}
+
+.colorgray{
+  background-color: rgb(212, 212, 212);
+}
+
+
+.colorwhite{
+  display: flex;
+  background-color: rgb(224, 224, 224);
+  padding: 2% !important;
+}
+
+.containBody{
+  margin: 0%;
+  padding: 0%;
+  height: 600px !important;
+  width: 100% !important;
+  
+}
+
+
+img{
+  height: min-content;
+  width: 600px;
+  height: 600px;
+}
+/*
+.imageGHEI{
+  height: 200px;
+  width: 200px;
+  //background-color: blue;
+  background-image: url('/Assets/logo.png');
+}
+*/
+
+
+
+
+
